Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6(EOL)
Description
May or may not be related to MDEV-22733 (same frames). May or may not be significant issue, though it is a 10.6 regression. Feel free to lower prio if not deemed important.
SET SESSION old_mode=''; |
ALTER TABLE mysql.innodb_index_stats MODIFY stat_description VARCHAR(1024) COLLATE utf8_bin; |
CREATE TABLE t (a INT) ENGINE=InnoDB; |
Leads to:
|
10.6.2 6c39eaeb126328e7813b146ecf652d51e4508981 (Debug) |
mysqld: /test/10.6_dbg/storage/innobase/dict/dict0stats.cc:408: dberr_t dict_table_schema_check(const dict_table_schema_t*, char*, size_t): Assertion `table->cols[j].len < req_schema->columns[i].len' failed.
|
|
10.6.2 6c39eaeb126328e7813b146ecf652d51e4508981 (Debug) |
Core was generated by `/test/MD120621-mariadb-10.6.2-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
[Current thread is 1 (Thread 0x1508e00e9700 (LWP 2672327))]
|
(gdb) bt
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x00001508e134c859 in __GI_abort () at abort.c:79
|
#2 0x00001508e134c729 in __assert_fail_base (fmt=0x1508e14e2588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55992b0fe948 "table->cols[j].len < req_schema->columns[i].len", file=0x55992b0fe778 "/test/10.6_dbg/storage/innobase/dict/dict0stats.cc", line=408, function=<optimized out>) at assert.c:92
|
#3 0x00001508e135df36 in __GI___assert_fail (assertion=assertion@entry=0x55992b0fe948 "table->cols[j].len < req_schema->columns[i].len", file=file@entry=0x55992b0fe778 "/test/10.6_dbg/storage/innobase/dict/dict0stats.cc", line=line@entry=408, function=function@entry=0x55992b0fe878 "dberr_t dict_table_schema_check(const dict_table_schema_t*, char*, size_t)") at assert.c:101
|
#4 0x000055992ab9e85f in dict_table_schema_check (req_schema=req_schema@entry=0x55992b6f8e80 <index_stats_schema>, errstr=errstr@entry=0x1508e00e5600 "@V\016\340\b\025", errstr_sz=errstr_sz@entry=512) at /test/10.6_dbg/storage/innobase/dict/dict0stats.cc:408
|
#5 0x000055992aba1c34 in dict_stats_persistent_storage_check (caller_has_dict_sys_mutex=caller_has_dict_sys_mutex@entry=false) at /test/10.6_dbg/storage/innobase/dict/dict0stats.cc:503
|
#6 0x000055992aba9477 in dict_stats_update (table=table@entry=0x1508a800d778, stats_upd_option=stats_upd_option@entry=DICT_STATS_EMPTY_TABLE) at /test/10.6_dbg/storage/innobase/dict/dict0stats.cc:3506
|
#7 0x000055992a858ddd in create_table_info_t::create_table_update_dict (this=this@entry=0x1508e00e5c30) at /test/10.6_dbg/storage/innobase/handler/ha_innodb.cc:12896
|
#8 0x000055992a88102c in ha_innobase::create (this=<optimized out>, name=<optimized out>, form=<optimized out>, create_info=<optimized out>, file_per_table=<optimized out>, trx=0x1508e01a3290, trx@entry=0x0) at /test/10.6_dbg/storage/innobase/handler/ha_innodb.cc:13035
|
#9 0x000055992a877079 in ha_innobase::create (this=<optimized out>, name=<optimized out>, form=<optimized out>, create_info=<optimized out>) at /test/10.6_dbg/storage/innobase/handler/ha_innodb.cc:13056
|
#10 0x000055992a477217 in handler::ha_create (this=0x15089003e070, name=0x1508e00e7670 "./test/t", form=form@entry=0x1508e00e6200, info_arg=info_arg@entry=0x1508e00e7ba0) at /test/10.6_dbg/sql/handler.cc:5391
|
#11 0x000055992a477eb1 in ha_create_table (thd=thd@entry=0x150890000db8, path=0x1508e00e7670 "./test/t", db=0x150890014778 "test", table_name=0x150890014060 "t", create_info=create_info@entry=0x1508e00e7ba0, frm=frm@entry=0x1508e00e7660, skip_frm_file=false) at /test/10.6_dbg/sql/handler.cc:5856
|
#12 0x000055992a26b1c7 in create_table_impl (thd=thd@entry=0x150890000db8, ddl_log_state_create=ddl_log_state_create@entry=0x1508e00e7900, ddl_log_state_rm=<optimized out>, ddl_log_state_rm@entry=0x1508e00e7920, orig_db=@0x1508900140b0: {str = 0x150890014778 "test", length = 4}, orig_table_name=@0x1508900140c0: {str = 0x150890014060 "t", length = 1}, db=@0x1508900140b0: {str = 0x150890014778 "test", length = 4}, table_name=@0x1508900140c0: {str = 0x150890014060 "t", length = 1}, path=@0x1508e00e7650: {str = 0x1508e00e7670 "./test/t", length = 8}, options=<optimized out>, create_info=0x1508e00e7ba0, alter_info=0x1508e00e7ab0, create_table_mode=0, is_trans=0x1508e00e78ff, key_info=0x1508e00e7648, key_count=0x1508e00e7644, frm=0x1508e00e7660) at /test/10.6_dbg/sql/sql_table.cc:4449
|
#13 0x000055992a26b794 in mysql_create_table_no_lock (thd=thd@entry=0x150890000db8, ddl_log_state_create=ddl_log_state_create@entry=0x1508e00e7900, ddl_log_state_rm=ddl_log_state_rm@entry=0x1508e00e7920, db=db@entry=0x1508900140b0, table_name=table_name@entry=0x1508900140c0, create_info=create_info@entry=0x1508e00e7ba0, alter_info=0x1508e00e7ab0, is_trans=0x1508e00e78ff, create_table_mode=0, table_list=0x150890014098) at /test/10.6_dbg/sql/sql_table.cc:4548
|
#14 0x000055992a26bbb7 in mysql_create_table (thd=thd@entry=0x150890000db8, create_table=create_table@entry=0x150890014098, create_info=create_info@entry=0x1508e00e7ba0, alter_info=alter_info@entry=0x1508e00e7ab0) at /test/10.6_dbg/sql/sql_table.cc:4660
|
#15 0x000055992a26da61 in Sql_cmd_create_table_like::execute (this=<optimized out>, thd=0x150890000db8) at /test/10.6_dbg/sql/sql_table.cc:11770
|
#16 0x000055992a19bfe1 in mysql_execute_command (thd=thd@entry=0x150890000db8) at /test/10.6_dbg/sql/sql_parse.cc:5983
|
#17 0x000055992a182890 in mysql_parse (thd=thd@entry=0x150890000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1508e00e8400) at /test/10.6_dbg/sql/sql_parse.cc:8016
|
#18 0x000055992a1913fa in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x150890000db8, packet=packet@entry=0x15089000b769 "CREATE TABLE t (a INT)", packet_length=packet_length@entry=22, blocking=blocking@entry=true) at /test/10.6_dbg/sql/sql_class.h:1340
|
#19 0x000055992a1947da in do_command (thd=0x150890000db8, blocking=blocking@entry=true) at /test/10.6_dbg/sql/sql_parse.cc:1406
|
#20 0x000055992a2f8c8e in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55992c877418, put_in_cache=put_in_cache@entry=true) at /test/10.6_dbg/sql/sql_connect.cc:1410
|
#21 0x000055992a2f9293 in handle_one_connection (arg=arg@entry=0x55992c877418) at /test/10.6_dbg/sql/sql_connect.cc:1312
|
#22 0x000055992a7a7166 in pfs_spawn_thread (arg=0x55992c75fab8) at /test/10.6_dbg/storage/perfschema/pfs.cc:2201
|
#23 0x00001508e185a609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#24 0x00001508e1449293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Bug confirmed present in:
MariaDB: 10.6.2 (dbg)
Bug (or feature/syntax) confirmed not present in:
MariaDB: 10.2.38 (dbg), 10.2.38 (opt), 10.3.29 (dbg), 10.3.29 (opt), 10.4.19 (dbg), 10.4.19 (opt), 10.5.10 (dbg), 10.5.10 (opt), 10.6.2 (opt)
MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.51 (dbg), 5.6.51 (opt), 5.7.34 (dbg), 5.7.34 (opt), 8.0.24 (dbg), 8.0.24 (opt)