MDEV-25907: Assertion failed in dict_table_schema_check()

dict_table_schema_check(): Simply remove the debug assertion.
We will still return a failure.